--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ canvas {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%)scale(200%);
+    image-rendering: pixelated;
 }
 
 @font-face {
